Edit the section of communication channels

--- a/about.html
+++ b/about.html
@@ -25,53 +25,7 @@
     <title>About Us</title>
   </head>
   <body>
-    <header>
-      <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top shadow">
-        <div class="container-fluid">
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarTogglerDemo03"
-            aria-controls="navbarTogglerDemo03"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <a class="navbar-brand" href="#">NAHID BOOKS</a>
-          <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a
-                  class="nav-link active home"
-                  aria-current="page"
-                  href="index.html"
-                  >Home</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link login register" href="login.html"
-                  >login/signUp</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link about" href="about.html">About Us</a>
-              </li>
-            </ul>
-            <form class="d-flex" role="search">
-              <input
-                class="form-control me-2"
-                type="search"
-                placeholder="Search"
-                aria-label="Search"
-              />
-              <button class="btn btn-danger" type="submit">Search</button>
-            </form>
-          </div>
-        </div>
-      </nav> -->
-    </header>
+    <header></header>
     <main>
       <div class="container pt-5 pb-5">
         <h1>This is books website</h1>
@@ -104,7 +58,7 @@
         </div>
 
         <div class="row mt-5 text-center">
-          <div class="col-6">
+          <div class="col-md-6 col-12">
             <div class="info">
               <i class="bi bi-house-door icon"></i>
               <span>Address</span>
@@ -116,7 +70,7 @@
               <span>:+98 51 36046964</span>
             </div>
           </div>
-          <div class="col-6">
+          <div class="col-md-6 col-12">
             <div class="link">
               <i class="bi bi-instagram icon"></i>
               <span>Instagram:</span>
