edit search form-edit search in profile.js

--- a/product.html
+++ b/product.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="style/product.css" />
     <link rel="stylesheet" href="style/style.css" />
     <link rel="stylesheet" href="style/header-footer-style.css" />
-    <title>Product</title>
+    <title>Detail</title>
   </head>
   <body>
     <header></header>
