--- a/about.html
+++ b/about.html
@@ -57,8 +57,8 @@
           </p>
         </div>
 
-        <div class="row mt-5 text-center">
-          <div class="col-md-6 col-12">
+        <div class="row mt-5">
+          <div class="col-md-6 col-12 mb-3">
             <div class="info">
               <i class="bi bi-house-door icon"></i>
               <span>Address</span>
